Serifu.Web/Assets/autocomplete.css
autocomplete-list {
  --option-height: 2em;
  --max-visible-options: 10;

  overflow-y: auto;
  max-height: calc(var(--option-height) * var(--max-visible-options));
  position: absolute;
  z-index: 9999;

  &[hidden] {
    display: none;
  }

  button {
    all: unset;
    display: block;
    width: 100%;
    padding: 0 var(--option-height) 0 calc(var(--option-height) * 0.3);
    height: var(--option-height);
    box-sizing: border-box;

    &.selected {
      background: var(--menu-hover-background);
    }

    &::before {
      content: '@';
    }
  }

  @media not (pointer: fine) {
    --option-height: 2.5em;
  }
}

